--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ body::-webkit-scrollbar-thumb {
 .customer-wrapper {
   position: absolute;
   bottom: 16px;
-  right: 16px;
+  left: 16px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
